--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,4 +22,6 @@ dependencies = [
     "psycopg2-binary>=2.9.11",
     "langgraph-checkpoint-postgres>=3.0.1",
     "supabase>=2.25.0",
+    "fastapi>=0.124.0",
+    "uvicorn[standard]>=0.38.0",
 ]
