--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,4 +24,6 @@ dependencies = [
     "supabase>=2.25.0",
     "fastapi>=0.124.0",
     "uvicorn[standard]>=0.38.0",
+    "asyncpg>=0.31.0",
+    "greenlet>=3.3.0",
 ]
