--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,3 +32,11 @@ dependencies = [
     "httpx>=0.27.0",
     "python-multipart>=0.0.9",
 ]
+
+[[tool.uv.index]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+explicit = true
+
+[tool.uv.sources]
+torch = { index = "pytorch-cpu" }
